--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -6,25 +6,39 @@
 
 .un-list {
   list-style-type: none;
-  margin-left: 60px;
+  margin-left: 0px;
+
 }
 
 .description {
-  // box-shadow: 2px 2px 5px #888888;
-  height: 375px;
+  margin-left: 10px;
+  height: 430px;
+  width: 593px;
   font-family: 'Source Serif Pro', serif, 'Dancing Script', cursive;
   line-height: 2.5;
-  font-size: 18px;
+  line-height: 2.5;
+  border-radius: 7px;
+}
+
+.imaage {
+  height: 700px;
+}
+
+.contents {
+  border-radius: 7px;
+  height: 430px;
+  width: 500px;
+  margin-left: px;
 }
 .btn {
   border-radius: 4px;
+  margin-top: 30px;
 }
-.contents {
-  // box-shadow: 2px 2px 5px #888888;
-}
+
 .quotes {
   font-family: 'Source Serif Pro', serif, 'Dancing Script', cursive;
   letter-spacing: 0.1em;
+  border-radius: 7px;
 }
 
 .art-name {
