--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -19,8 +19,8 @@ body {
 }
 
 #page-info {
-  text-align: center;
-  margin: 80px 0 40px 0;
+  text-align: left;
+  margin: 80px 0 40px 315px;
   color: grey;
   font-family: 'Montserrat', sans-serif;
 }
