--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -17,15 +17,15 @@
 }
 
 .carousel-photo-1{
-  background-image: url('filip-kominik-IHtVbLRjTZU-unsplash.jpg')
+  background-image: asset-url('filip-kominik-IHtVbLRjTZU-unsplash.jpg')
 }
 
 .carousel-photo-2{
-  background-image: url('jonny-caspari-KuudDjBHIlA-unsplash.jpg')
+  background-image: asset-url('jonny-caspari-KuudDjBHIlA-unsplash.jpg')
 }
 
 .carousel-photo-3{
-  background-image: url('leonardo-yip-QCVsZR6kfp4-unsplash.jpg')
+  background-image: asset-url('leonardo-yip-QCVsZR6kfp4-unsplash.jpg')
 }
 
 .carousel-text{
