Trying to fix api key

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
   </div>
   <div class="carousel-item carousel-photo-3 carousel-text">
     <div class="carousel-inner-1">
-      <%= link_to "Get Lucky", art_path(@art), class: "carousel-text" %>
+      <%= link_to "Get Lucky", arts_path, class: "carousel-text" %>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
